# Pokesay

./: Cargo.toml
src/: main.rs  pokemon.rs
