[package]
name = "pokesay"
version = "0.1.0"
authors = ["doxterpepper <mail@dockoneal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.3"
